ve.init.MWVESwitchConfirmDialog: Fix gap above dropdown on MonoBook
In WikimediaUI theme, the height of the toolbar is defined with
'padding-top', but in Apex theme, it is defined with 'height'.
Set both properties to make this work with both themes.

Remove unused styles for the dropdown. It is now positioned by OOUI
(since T192505). This should have been done at the same time as
e1635fdc5225fbdcda941103c31382fa7456d1b4.

Bug: T194120

--- a/modules/ve-mw/init/styles/ve.init.MWVESwitchConfirmDialog.css
+++ b/modules/ve-mw/init/styles/ve.init.MWVESwitchConfirmDialog.css
@@ -24,8 +24,5 @@
 
 .ve-init-mw-editSwitch .oo-ui-popupToolGroup.oo-ui-iconElement .oo-ui-popupToolGroup-handle {
 	padding-top: 32px;
-}
-
-.ve-init-mw-editSwitch .oo-ui-popupToolGroup .oo-ui-toolGroup-tools {
-	top: 32px;
+	height: 0;
 }
